# azure-retrieval-search

./: .env.local  .gitignore  README.md  chat_agent.py  indexer.py  knowedge_agent.py  main.py  pyproject.toml  pyvenv.cfg  retrival_agent.py  searcher.py  trial.py
